# rust_db

./: Cargo.toml  Dockerfile  V1__userinit.sql  doc
src/: conf.rs  db.rs  main.rs
src/controllers/: forum.rs  post.rs  service.rs  thread.rs  user.rs
src/db/: db.rs
src/managers/: forum_manager.rs  mod.rs  post_manager.rs  thread_manager.rs  user_manager.rs
src/models/: error.rs  forum.rs  mod.rs  post.rs  status.rs  thread.rs  user.rs  vote.rs
src/queries/: forum.rs  mod.rs  post.rs  service.rs  thread.rs  user.rs
